welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {copyMotif()}



def reproMotif(){
  var i = getMondeLargeur()
  for (j <- 0 to i-1){
    gauche()
    avance()
    droite()
    avance()    
  }}

def copyMotif(){
  var i = getMondeHauteur()
  var T = new Array[Color](i)
  for (j <- 0 to i-1){
    T(j) = getCouleurSol()
    avance()  
    }
  return T}

def Motif(){
  var j = getMondeLargeur()
  for (k <- 0 to j-1)
  setCouleurBrosse(T(j))
  brosse()
  avance()
}
  
  

def brosse(){
  baisseBrosse()
  leveBrosse()
}